style(css): fix navigation gap

--- a/static/css/navigation-style.css
+++ b/static/css/navigation-style.css
@@ -173,7 +173,7 @@ nav li a:hover {
       min-width: 250px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       z-index: 1;
-      top: 3.7em;
+      top: 3.65em;
   }
 
   /* Links inside the dropdown */
